edited forms, tickets on dashboard

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,35 @@
 <h1>Dashboard#index</h1>
 <p>Find me in app/views/dashboard/index.html.erb</p>
 
+<table>
+    <tr>
+        <th>Ticket Number</th>
+        <th>Customer</th>
+        <th>Tech</th>
+        <th>Category</th>
+        <th>Equipment</th>
+        <th>Hardware</th>
+        <th>Software</th>
+        <th>Description</th>
+        <th>Status</th>
+        <th>Walk_in</th>
+    </tr>
+
+    <% @tickets.reverse.each do |f|%>
+    <tr>
+        <td><%=link_to(f.id, ticket_path(f.id))%></td>
+        <td><%=link_to(f.customer.fname + " " + f.customer.lname, customer_path(f.customer.id))%></td>
+        <td><%=f.user.fname%> <%=f.user.lname%></td>
+        <td><%=f.category%></td>
+        <td><%=f.equipment%></td>
+        <td><%=f.hardware%></td>
+        <td><%=f.software%></td>
+        <td><%=f.description%></td>
+        <td><%=f.status%></td>
+        <td><%=f.walk_in%></td>
+    </tr>
+    <%end%>
+</table>
+
+
 
