--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :duration %>
+    <%= form.label "Duration(in minutes)" %>
     <%= form.number_field :duration %>
   </div>
 
