--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= link_to "Sign out", destroy_user_session_path, method: :delete%>
     <%= link_to "Dashboard", dashboard_path %>
     <%= link_to "New Customer", new_customer_path %>
+    <%= link_to "View Customers", customers_path %>
     <%= link_to "New Ticket", new_ticket_path %>
     <% end %>
     <%= yield %>
