--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -41,7 +41,7 @@
 
 <p>
   <h3>For Customer:</h3>
-  <%= @ticket.customer.fname %> <%=@ticket.customer.lname %>
+  <%= @ticket.customer.fullname%>
 </p>
 
 <p>
@@ -49,8 +49,15 @@
   <%= @ticket.user.fullname %>
 </p>
 
+<% if @ticket.closed_by != nil %>
+  <p>
+    <h3>Closed By:</h3>
+    <%= @ticket.closer.fullname %>
+  </p>
+<% end %>
+
 <%= link_to 'Edit', edit_ticket_path(@ticket) %> |
-<%= link_to 'Back', tickets_path %>
+<%= link_to 'Back', dashboard_path %>
 
 <%if @ticket.status == true %>
   <%= button_to 'Close Ticket', close_path(@ticket), method: :patch, data: { confirm: "It's best practice to close a ticket using the comment/trip feature by checking resolved. Are you sure you want to close this ticket without giving feedback?" } %>
@@ -62,6 +69,8 @@
   <%= button_to 'Delete Ticket', ticket_path(@ticket), method: :delete, data: { confirm: "Are you sure you want to delete this ticket?" } %>
 <% end %>
 
+<% if @ticket.trips.empty? %>
+<% else %>
   <h1>Trips/Comments</h1>
 
   <table>
@@ -75,9 +84,9 @@
       <th>Resolved?</th>
     </tr>
 
-    <%@ticket.trips.each do |f|%>
+    <%@ticket.trips.reverse.each_with_index do |f, i|%>
       <tr>
-          <td><%=f.id%></td>
+          <td><%=i + 1%></td>
           <td><%=time_ago_in_words(f.created_at)%></td>
           <td><%=f.comment%></td>
           <td><%=f.duration%></td>
@@ -87,7 +96,7 @@
     <%end%>
 
   </table>
-
+<% end %>
 
 <%if @ticket.status == true%>
   <h1>Add a Trip/Comment</h1>
