--- a/app/views/dashboard/closed.html.erb
+++ b/app/views/dashboard/closed.html.erb
@@ -1,4 +1,41 @@
-<h1>Closed Tickets</h1>
+<% if @yourclosed.blank? %>
+<% else %>
+<h1>Your Closed Tickets</h1>
+    <table>
+    <tr>
+        <th>Ticket Number</th>
+        <th>Customer</th>
+        <th>Tech</th>
+        <th>Closed By</th>
+        <th>Category</th>
+        <th>Equipment</th>
+        <th>Hardware</th>
+        <th>Software</th>
+        <th>Description</th>
+        <th>Status</th>
+        <th>Walk_in</th>
+    </tr>
+
+    <% @yourclosed.reverse.each do |f|%>
+    <tr>
+        <td><%=link_to(f.id, ticket_path(f.id))%></td>
+        <td><%=link_to(f.customer.fname + " " + f.customer.lname, customer_path(f.customer.id))%></td>
+        <td><%=f.user.fullname%></td>
+        <td><%=f.closer.fullname %></td>
+        <td><%=f.category%></td>
+        <td><%=f.equipment%></td>
+        <td><%=f.hardware%></td>
+        <td><%=f.software%></td>
+        <td><%=f.description%></td>
+        <td><% if f.status == false %>Closed <% else %>This doesn't belong here! <% end %></td>
+        <td><%=f.walk_in%></td>
+    </tr>
+    <%end%>
+</table>
+<% end %>
+
+
+<h1>All Closed Tickets</h1>
 
 <table>
     <tr>
@@ -15,7 +52,7 @@
         <th>Walk_in</th>
     </tr>
 
-    <% @tickets.reverse.each do |f|%>
+    <% @allclosed.reverse.each do |f|%>
     <tr>
         <td><%=link_to(f.id, ticket_path(f.id))%></td>
         <td><%=link_to(f.customer.fname + " " + f.customer.lname, customer_path(f.customer.id))%></td>
@@ -26,7 +63,7 @@
         <td><%=f.hardware%></td>
         <td><%=f.software%></td>
         <td><%=f.description%></td>
-        <td><%=f.status%></td>
+        <td><% if f.status == false %>Closed <% else %>This doesn't belong here! <% end %></td>
         <td><%=f.walk_in%></td>
     </tr>
     <%end%>
