--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -5,16 +5,12 @@
 <table>
   <thead>
     <tr>
-      <th>Fname</th>
-      <th>Lname</th>
+      <th>Name</th>
       <th>Phone number</th>
       <th>Email</th>
       <th>Address</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Zipcode</th>
       <th>Company</th>
-      <th>User</th>
+      <th>Created By</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,24 +18,15 @@
   <tbody>
     <% @customers.each do |customer| %>
       <tr>
-        <td><%= customer.fname %></td>
-        <td><%= customer.lname %></td>
+        <td><%= link_to customer.fullname, customer %></td>
         <td><%= customer.phone_number %></td>
         <td><%= customer.email %></td>
-        <td><%= customer.address %></td>
-        <td><%= customer.city %></td>
-        <td><%= customer.state %></td>
-        <td><%= customer.zipcode %></td>
-        <td><%= customer.company %></td>
-        <td><%= customer.user %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= customer.fulladdress %></td>
+        <td><% if customer.company.nil? %>None<% else %><%= customer.company %><% end %></td>
+        <td><%= customer.user.fullname %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Customer', new_customer_path %>
