--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<h1>Your Tickets</h1>
+<h1>Your Open Tickets</h1>
 <table>
     <tr>
         <th>Ticket Number</th>
@@ -31,7 +31,7 @@
     <%end%>
 </table>
 
-<h1>Open Tickets</h1>
+<h1>All Open Tickets</h1>
 
 <table>
     <tr>
