--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,21 +6,42 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    <% if user_signed_in? %>
-    <h3>Tech: <%= current_user.fname %> <%= current_user.lname %></h3>
-    <%= link_to "Dashboard", dashboard_path %>
-    <%= link_to "New Ticket", new_ticket_path %>
-    <%= link_to "New Customer", new_customer_path %>
-    <%= link_to "Closed Tickets", closed_tickets_path %>
-    <%= link_to "View Customers", customers_path %>
-    <%= link_to "Sign out", destroy_user_session_path, method: :delete%>
     
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
    
-    <% end %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+
+    <link rel="stylesheet" href="main.css">
+    
+  </head>
+  <div class='container'>
+  <body class="background">
+    <nav id="nav" class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#" style="color:white;">EZ Ticket</a>
+        </div>
+      <ul class="nav navbar-nav" id="link-color">
+        <% if user_signed_in? %>
+          <li style="color:white"><%= link_to "Dashboard", dashboard_path %></li>
+          <li><%= link_to "New Ticket", new_ticket_path %></li>
+          <li><%= link_to "New Customer", new_customer_path %></li>
+          <li><%= link_to "Closed Tickets", closed_tickets_path %></li>
+          <li><%= link_to "View Customers", customers_path %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right" id="link-color">
+          <li >Tech: <%= current_user.fname %></li>
+          <li><%= link_to "Sign out", destroy_user_session_path, method: :delete%></li>
+      </ul>
+      <% end %>
+      </div>
+    </nav>
+   
     <%= yield %>
   </body>
+  <div>
 </html>
