--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -23,12 +23,12 @@ a {
   color: #000;
 
   &:visited {
-    color: #666;
+    color: none;
   }
 
   &:hover {
     color: #fff;
-    background-color: #000;
+    background-color: none;
   }
 }
 
