--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,66 +1,68 @@
-<%= form_with(model: customer, local: true) do |form| %>
-  <% if customer.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
+<div class="form-div">
+  <%= form_with(model: customer, local: true) do |form| %>
+    <% if customer.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
-      <ul>
-      <% customer.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% customer.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= form.label "First Name" %>
+      <%= form.text_field :fname, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label "Last Name" %>
+      <%= form.text_field :lname, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :phone_number %>
+      <%= form.number_field :phone_number, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :email %>
+      <%= form.text_field :email, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :address %>
+      <%= form.text_field :address, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :city %>
+      <%= form.text_field :city, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :state %>
+      <%= select("customer", "state", options_for_select(STATES), {}, class: "form-control")%>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :zipcode %>
+      <%= form.number_field :zipcode, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :company %>
+      <%= form.text_field :company, class: 'form-control' %>
+    </div>
+
+    <div class="field">
+      <%= form.hidden_field (:user_id) %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit class: 'btn btn-primary' %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label "First Name" %>
-    <%= form.text_field :fname %>
-  </div>
-
-  <div class="field">
-    <%= form.label "Last Name" %>
-    <%= form.text_field :lname %>
-  </div>
-
-  <div class="field">
-    <%= form.label :phone_number %>
-    <%= form.number_field :phone_number %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div class="field">
-    <%= form.label :address %>
-    <%= form.text_field :address %>
-  </div>
-
-  <div class="field">
-    <%= form.label :city %>
-    <%= form.text_field :city %>
-  </div>
-
-  <div class="field">
-    <%= form.label :state %>
-    <%= select("customer", "state", options_for_select(STATES))%>
-  </div>
-
-  <div class="field">
-    <%= form.label :zipcode %>
-    <%= form.number_field :zipcode %>
-  </div>
-
-  <div class="field">
-    <%= form.label :company %>
-    <%= form.text_field :company %>
-  </div>
-
-  <div class="field">
-    <%= form.hidden_field (:user_id) %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
