--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,32 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Customers</h1>
+<h2 class="heading-center">Customers</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Phone number</th>
-      <th>Email</th>
-      <th>Address</th>
-      <th>Company</th>
-      <th>Created By</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @customers.each do |customer| %>
+<div style="center-div">
+  <table class="table-bordered text-center">
+    <thead>
       <tr>
-        <td><%= link_to customer.fullname, customer %></td>
-        <td><%= customer.phone_number %></td>
-        <td><%= mail_to customer.email %></td>
-        <td><%= customer.fulladdress %></td>
-        <td><% if customer.company.blank? %>None<% else %><%= customer.company %><% end %></td>
-        <td><%= customer.user.fullname %></td>
+        <th>Name</th>
+        <th>Phone number</th>
+        <th>Email</th>
+        <th>Address</th>
+        <th>Company</th>
+        <th>Created By</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody>
+      <% @customers.each do |customer| %>
+        <tr>
+          <td><%= link_to customer.fullname, customer %></td>
+          <td><%= customer.phone_number %></td>
+          <td><%= mail_to customer.email %></td>
+          <td><%= customer.fulladdress %></td>
+          <td><% if customer.company.blank? %>None<% else %><%= customer.company %><% end %></td>
+          <td><%= customer.user.fullname %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 <br>
