--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,4 @@
-<h3>New Customer</h3>
+<h2 class="heading-center">New Customer</h2>
 
 <%= render 'form', customer: @customer %>
 
-<%= link_to 'Back', customers_path %>
