--- a/app/views/dashboard/closed.html.erb
+++ b/app/views/dashboard/closed.html.erb
@@ -1,7 +1,7 @@
 <% if @yourclosed.blank? %>
 <% else %>
-<h1>Your Closed Tickets</h1>
-    <table>
+<h2 class="heading-center">Your Closed Tickets</h2>
+    <table class="table-bordered text-center">
     <tr>
         <th>Ticket Number</th>
         <th>Customer</th>
@@ -13,7 +13,7 @@
         <th>Software</th>
         <th>Description</th>
         <th>Status</th>
-        <th>Walk_in</th>
+        <th>Walk in?</th>
     </tr>
 
     <% @yourclosed.reverse.each do |f|%>
@@ -35,9 +35,9 @@
 <% end %>
 
 
-<h1>All Closed Tickets</h1>
+<h2 class="heading-center">All Closed Tickets</h2>
 
-<table>
+<table class="table-bordered text-center">
     <tr>
         <th>Ticket Number</th>
         <th>Customer</th>
@@ -49,7 +49,7 @@
         <th>Software</th>
         <th>Description</th>
         <th>Status</th>
-        <th>Walk_in</th>
+        <th>Walk in?</th>
     </tr>
 
     <% @allclosed.reverse.each do |f|%>
