--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
           <li><%= link_to "View Customers", customers_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" id="link-color">
-          <li >Tech: <%= current_user.fname %></li>
+          <li style="color:white;margin-top:16px;">Tech: <%= current_user.fname %></li>
           <li><%= link_to "Sign out", destroy_user_session_path, method: :delete%></li>
       </ul>
       <% end %>
@@ -43,5 +43,5 @@
    
     <%= yield %>
   </body>
-  <div>
+  </div>
 </html>
