--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,60 +1,62 @@
-<%= form_with(model: ticket, local: true) do |form| %>
-  <% if ticket.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(ticket.errors.count, "error") %> prohibited this ticket from being saved:</h2>
+<div class="form-div">
+  <%= form_with(model: ticket, local: true) do |form| %>
+    <% if ticket.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(ticket.errors.count, "error") %> prohibited this ticket from being saved:</h2>
 
-      <ul>
-      <% ticket.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% ticket.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= form.label :category %>
+      <%= select("ticket", "category", options_for_select(CATEGORY), {}, class: "form-control")%>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :equipment %>
+      <%= select("ticket", "equipment", options_for_select(EQUIPMENT), {}, class: "form-control")%>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :customer_id %>
+      <%= select("ticket","customer_id", options_for_select(customer_array), {}, class: "form-control") %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :hardware %>
+      <%= form.text_field :hardware, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :software %>
+      <%= form.text_field :software, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :description %>
+      <%= form.text_area :description, class: 'form-control input-lg ticket-desc' %>
+    </div>
+
+    <div class="field">
+      <%= form.hidden_field(:status) %>
+    </div>
+
+    <div>
+      <%= form.label :walk_in %>
+      <%= form.check_box :walk_in %>
+    </div>
+
+    <div class="field">
+      <%= form.hidden_field(:user_id) %>
+    </div>
+
+    <div class="actions ">
+      <%= form.submit class: 'btn btn-primary' %>
     </div>
   <% end %>
-
-  <div class="form-group">
-    <%= form.label :category %>
-    <%= select("ticket", "category", options_for_select(CATEGORY), {}, class: "form-control")%>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :equipment %>
-    <%= select("ticket", "equipment", options_for_select(EQUIPMENT), {}, class: "form-control")%>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :customer_id %>
-    <%= select("ticket","customer_id", options_for_select(customer_array), {}, class: "form-control") %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :hardware %>
-    <%= form.text_field :hardware, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :software %>
-    <%= form.text_field :software, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :description %>
-    <%= form.text_area :description, class: 'form-control input-lg ticket-desc' %>
-  </div>
-
-  <div class="field">
-    <%= form.hidden_field(:status) %>
-  </div>
-
-  <div>
-    <%= form.label :walk_in %>
-    <%= form.check_box :walk_in %>
-  </div>
-
-  <div class="field">
-    <%= form.hidden_field(:user_id) %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
