--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,5 +1,5 @@
-<h3>New Ticket</h3>
+<h2 class="heading-center">New Ticket</h2>
 
 <%= render 'form', ticket: @ticket %>
 
-<%= link_to 'Back', tickets_path %>
+
