--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<p id="notice" class="heading-center"><%= notice %></p>
 
 <%if flash[:error] != nil%>
   <div style="color:red;">
@@ -10,80 +10,82 @@
 <%end%>
 
 
-<p>
-  <h3>Category:</h3>
-  <%= @ticket.category %>
-</p>
+<div class="show-div">
+  <div class="area-border">
+    <h3>Category</h3>
+    <%= @ticket.category %>
+  </div>
 
-<p>
-  <h3>Equipment:</h3>
-  <%= @ticket.equipment %>
-</p>
 
-<p>
-  <h3>Hardware:</h3>
-  <%= @ticket.hardware %>
-</p>
+  <div class="area-border">
+    <h3>Equipment</h3>
+    <%= @ticket.equipment %>
+  </div>
 
-<p>
-  <h3>Software:</h3>
-  <%= @ticket.software %>
-</p>
+  <div class="area-border">
+    <h3>Hardware</h3>
+    <%= @ticket.hardware %>
+  </div>
 
-<p>
-  <h3>Description:</h3>
-  <%= @ticket.description %>
-</p>
+  <div class="area-border">
+    <h3>Software</h3>
+    <% if @ticket.software == nil || @ticket.software == "" %>None<% else %><%= @ticket.software %><% end %>
+  </div>
 
-<p>
-  <h3>Status:</h3>
-  <%if @ticket.status == true %>
-    <p>Open</p>
-  <% elsif @ticket.status == false %>
-    <p>Closed</p>
+  <div class="area-border" style="padding:20px;">
+    <h3>Description</h3>
+    <%= @ticket.description %>
+  </div>
+
+  <div class="area-border">
+    <h3>Status</h3>
+    <%if @ticket.status == true %>
+      <p>Open</p>
+    <% elsif @ticket.status == false %>
+      <p>Closed</p>
+    <% end %>
+  </div>
+
+  <div class="area-border">
+    <h3>Walk in?</h3>
+    <% if @ticket.walk_in == false%>No<% else %>Yes<% end %>
+  </div>
+
+  <div class="area-border">
+    <h3>For Customer</h3>
+    <%= link_to @ticket.customer.fullname,customer_path(@ticket.customer.id)%>
+  </div>
+
+  <div class="area-border">
+    <h3>Made By</h3>
+    <%= @ticket.user.fullname %>
+  </div>
+
+  <% if @ticket.closed_by != nil %>
+    <p>
+      <h3>Closed By</h3>
+      <%= @ticket.closer.fullname %>
+    </p>
   <% end %>
-</p>
 
-<p>
-  <h3>Walk in:</h3>
-  <%= @ticket.walk_in %>
-</p>
+  <% if @ticket.user == current_user %><%= link_to 'Edit', edit_ticket_path(@ticket), :class => "btn btn-primary" %><% end %>
 
-<p>
-  <h3>For Customer:</h3>
-  <%= link_to @ticket.customer.fullname,customer_path(@ticket.customer.id)%>
-</p>
+  <%if @ticket.status == true %>
+    <%= button_to 'Close Ticket', close_path(@ticket), method: :patch, data: { confirm: "It's best practice to close a ticket using the comment/trip feature by checking resolved. Are you sure you want to close this ticket without giving feedback?" }, :class => "btn btn-success" %>
+  <%else%>
+    <%= button_to 'Reopen Ticket', open_path(@ticket), method: :patch, data: { confirm: "Are you sure you want to reopen this ticket?" }, :class => "btn btn-success" %>
+  <%end%>
 
-<p>
-  <h3>Made By:</h3>
-  <%= @ticket.user.fullname %>
-</p>
-
-<% if @ticket.closed_by != nil %>
-  <p>
-    <h3>Closed By:</h3>
-    <%= @ticket.closer.fullname %>
-  </p>
-<% end %>
-
-<% if @ticket.user == current_user %><%= link_to 'Edit', edit_ticket_path(@ticket) %><% end %>
-<%= link_to 'Back', dashboard_path %>
-
-<%if @ticket.status == true %>
-  <%= button_to 'Close Ticket', close_path(@ticket), method: :patch, data: { confirm: "It's best practice to close a ticket using the comment/trip feature by checking resolved. Are you sure you want to close this ticket without giving feedback?" } %>
-<%else%>
-  <%= button_to 'Reopen Ticket', open_path(@ticket), method: :patch, data: { confirm: "Are you sure you want to reopen this ticket?" } %>
-<%end%>
-
-<%if @ticket.status == false && @ticket.user_id == current_user.id %>
-  <%= button_to 'Delete Ticket', ticket_path(@ticket), method: :delete, data: { confirm: "Are you sure you want to delete this ticket?" } %>
-<% end %>
+  <%if @ticket.status == false && @ticket.user_id == current_user.id %>
+    <%= button_to 'Delete Ticket', ticket_path(@ticket), method: :delete, data: { confirm: "Are you sure you want to delete this ticket?" }, :class => "btn btn-danger" %>
+  <% end %>
+</div>
 
 <% if @ticket.trips.empty? %>
 <% else %>
-  <h1>Trips/Comments</h1>
+  <h1 class="heading-center">Trips/Comments</h1>
 
-  <table>
+  <table class="table-bordered text-center">
 
     <tr>
       <th>Number</th>
@@ -109,7 +111,7 @@
 <% end %>
 
 <%if @ticket.status == true%>
-  <h1>Add a Trip/Comment</h1>
+  <h1 class="heading-center">Add a Trip/Comment</h1>
   <%= render "trips/form.html.erb", trip: @trip %>
 <%end%>
 
