--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="form-div">
+<div class="customer-div">
   <%= form_with(model: customer, local: true) do |form| %>
     <% if customer.errors.any? %>
       <div id="error_explanation">
