--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -62,10 +62,12 @@
   </div>
 
   <% if @ticket.closed_by != nil %>
+  <div class="area-border">
     <p>
       <h3>Closed By</h3>
       <%= @ticket.closer.fullname %>
     </p>
+  </div>
   <% end %>
 
   <% if @ticket.user == current_user %><%= link_to 'Edit', edit_ticket_path(@ticket), :class => "btn btn-primary" %><% end %>
